<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.vipulasri.ticketview.TicketView
            android:id="@+id/ticketView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            app:ticketBorderColor="@color/colorAccent"
            app:ticketBorderWidth="1dp"
            app:ticketCornerType="scallop"
            app:ticketDividerPadding="0dp"
            app:ticketDividerType="dash"
            app:ticketElevation="8dp"
            app:ticketOrientation="vertical"
            app:ticketScallopPositionPercent="50"
            app:ticketScallopRadius="10dp"
            app:ticketShowBorder="false"
            app:ticketShowDivider="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            >

            <!-- lyt imagen-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/imvImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        app:srcCompat="@drawable/ic_logo" />


                </RelativeLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    >


                    <TextView
                        android:id="@+id/tvNomTick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nom_tiket"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"/>

                    <TextView
                        android:id="@+id/tvDes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/des_tiket"
                        android:textColor="@color/colorTextoTicket"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pulsa"
                        android:textColor="@color/colorTextoTicket"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>


                </LinearLayout>



            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>